--- a/.gitignore
+++ b/.gitignore
@@ -1,14 +1,14 @@
 *.pyc
 
-gbm_equity_trading_env.py
 notepad.py
 RGrewal_Draft.pdf
 rl_portfolio_mngt.py
 rl_market_backtests.py
 
+__pycache__/
 arxiv_drafts/
 asset_valuations/
-figs/
+docs/figs/
 historical_prices/
 latex/
 models/
