--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,7 @@ rl_market_backtests.py
 
 .VSCodeCounter/
 __pycache__/
+artemis_hpc/
 arxiv_drafts/
 asset_valuations/
 docs/figs/
@@ -15,3 +16,4 @@ latex/
 models/
 results/additive
 results/multiplicative
+sareh2/
