--- a/.gitignore
+++ b/.gitignore
@@ -1,19 +1,19 @@
 *.pyc
 
-notepad.py
-RGrewal_Draft.pdf
-rl_portfolio_mngt.py
-rl_market_backtests.py
+notepad.py.py
+envs/market_envs.py
+envs/market_sim.py
+utils/market_eval.py
 
 .VSCodeCounter/
-__pycache__/
 artemis_hpc/
-arxiv_drafts/
-asset_valuations/
 docs/figs/
-historical_prices/
-latex/
+docs/COT_data
+docs/historical_data
+tex/
+paper_drafts/
 models/
 results/additive
 results/multiplicative
+results/multiverse
 sarea2/
