major features updated
-	Removed redundant retention of subgraphs for SAC backpropagation resulting in approximately 5% speed increase (gains get better as training runtime increases due to a more lightweight graph)
-	Improved handling of np.nan’s in SAC actor network for extreme outlier smoothing critic loss functions by using fairly random actions
-	Added GBM environments
-	Added dice roll optimal leverage (multiverse) experiments
-	Automated figure generation for all reinforcement learning experiments
-	Separated training inputs for additive and multiplicative for convenience
-	Removed superfluous action printing for multiplicative experiments that existed only for debugging
-	Renamed several python files
-	Improved type hints and comments
-	Shebang lines, source encodings, and headers for all python files
-	Trimmed number of package required

--- a/.gitignore
+++ b/.gitignore
@@ -1,19 +1,32 @@
+# python bytecode cache
 *.pyc
 
-notepad.py.py
-envs/market_envs.py
-envs/market_sim.py
-utils/market_eval.py
+# python virtual environment
+rl_env/
 
+# playground of new ideas
+notepad.py
+
+# output data (available upon request)
+models/
+results/
+
+# documents, figures, and HPC files
 .VSCodeCounter/
 artemis_hpc/
 docs/figs/
-docs/COT_data
-docs/historical_data
-tex/
 paper_drafts/
-models/
-results/additive
-results/multiplicative
-results/multiverse
+tex/
+
+# historical market indicators and prices
+docs/raw_data
+docs/market_datq
+
+# real market environments
+envs/market_envs.py
+utils/gen_market.py
+utils/market_sim.py
+utils/market_eval.py
+
+# protoype multi-stage model
 sarea2/
