--- a/.gitignore
+++ b/.gitignore
@@ -24,9 +24,13 @@ docs/market_datq
 
 # real market environments
 envs/market_envs.py
+envs/snp_evns.py
+utils/extract_xlsx.py
 utils/gen_market.py
+utils/make_time_csv.py
 utils/market_sim.py
 utils/market_eval.py
+utils/rep_bootstrap.py
 
 # protoype multi-stage model
 sarea2/
